I am not sure what's causing this bug